--- a/index.html
+++ b/index.html
@@ -1,12 +1,67 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>test</title>
+  <meta charset=utf-8 />
+  <title>WMS地图服务加载</title>
+  <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+  <script src="libs/jquery/1.7.2/jquery.min.js"></script>
+  <link rel="stylesheet" href="libs/leaflet/leaflet.css" />
+  <script src="libs/leaflet/leaflet.js"></script>
+  <script src="plugins/esri-leaflet/2.0.6/esri-leaflet.js"></script>
+  <script src="plugins/proj4leaflet/proj4-compressed.js"></script>
+  <script src="plugins/proj4leaflet/proj4leaflet.js"></script>
+  <style>
+    body { margin:0; padding:0; }
+    #map { position: absolute; top:0; bottom:0; right:0; left:0; }
+  </style>
+
+
 </head>
 <body>
-<div id="root"></div>
-<script type="text/javascript" src="/static/common.js" charset="utf-8"></script>
-<script type="text/javascript" src="/static/bundle.js" charset="utf-8"></script>
+
+<div id="map"></div>
+
+<script type="text/javascript">
+
+  var centerPoint = new L.LatLng(23.019866,114.293175); // 设置地图中心
+
+  var crs = new L.Proj.CRS("EPSG:2383", "+proj=tmerc +lat_0=0 +lon_0=114 +k=1 +x_0=500000 +y_0=0 +a=6378140 +b=6356755.288157528 +units=m +no_defs",
+  {
+    origin:  [-5123200, 10002100],
+    resolutions: [
+                    2116.670900008467,
+					1058.3354500042335,
+					529.167725002117,
+					264.583862501058,
+					132.291931250529,
+					66.1459656252646,
+					33.0729828126323,
+					16.9333672000677,
+					8.46668360003387,
+					4.23334180001693,
+					2.11667090000847,
+					0.529167725002117,
+					0.264583862501058,
+					0.132291931250529
+    ]
+  });
+  var mapOptions = {
+    center: centerPoint,
+    zoom: 3,
+    crs: crs,
+    attributionControl: true,
+  };
+  var map = new L.map('map', mapOptions);
+  //var tileLayer = new L.TileLayer('http://106.39.231.23/ArcGIS/rest/services/HZDG/%E5%BD%B1%E5%83%8F%E5%9B%BE/MapServer');
+  var tileLayer =  new L.esri.TiledMapLayer('http://106.39.231.23/ArcGIS/rest/services/HZDG/%E5%BD%B1%E5%83%8F%E5%9B%BE/MapServer', {
+      maxZoom: 13,
+      minZoom: 0,
+      continuousWorld: true
+  }).addTo(map);
+  //map.addLayer(tileLayer);
+  //map.setView([23.019866,114.293175], 3);
+
+
+</script>
+
 </body>
 </html>
