index3.html是可以正常调用的

--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
 
   var centerPoint = new L.LatLng(23.019866,114.293175); // 设置地图中心
 
-  var crs = new L.Proj.CRS("EPSG:2383", "+proj=tmerc +lat_0=0 +lon_0=114 +k=1 +x_0=500000 +y_0=0 +a=6378140 +b=6356755.288157528 +units=m +no_defs",
+  var crs = new L.Proj.CRS("EPSG:2383",
+      "+proj=tmerc +lat_0=0 +lon_0=114 +k=1 +x_0=500000 +y_0=0 +a=6378140 +b=6356755.288157528 +units=m +no_defs",
   {
     origin:  [-5123200, 10002100],
     resolutions: [
-                    2116.670900008467,
-					1058.3354500042335,
-					529.167725002117,
+                  	529.167725002117,
 					264.583862501058,
 					132.291931250529,
 					66.1459656252646,
