--- a/index4.html
+++ b/index4.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>arcgis rest service load</title>
+    <title>惠州市“四规合一”信息平台-水务专题应用</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <!-- Load libs and plugins-->
     <link rel="stylesheet" href="libs/leaflet/leaflet.css" />
@@ -14,17 +14,29 @@
     <link rel="stylesheet" href="css/cmn/utils.css">
     <script src="js/cmn/mapservice.js"></script>
     <script src="js/pages/index.js"></script>
+    <script src="plugins/search/placeholderTypewriter.js"></script>
+
 
 </head>
 <body>
+<div id="searchPanel">
+    <form class="wrapper">
+        <input class="inputbox" type="text" name="search" id="search">
+        <input class="submit" type="button" value="Search">
+    </form>
+</div>
 <div id="map" class="mapfull"></div>
 </body>
 <script>
     var mapUrl="http://gis.huizhou.gov.cn:8399/arcgis/rest/services/%E8%A1%8C%E6%94%BF%E5%8A%9E%E5%85%AC%E6%94%BF%E5%8A%A1%E5%BA%95%E5%9B%BE/%E8%A1%8C%E6%94%BF%E5%8A%9E%E5%85%AC%E5%9C%B0%E5%9B%BE%E6%94%BF%E5%8A%A1%E4%BA%8C%E7%89%88DEMV12/MapServer";
     var centerPoint = new L.LatLng(23.125965,114.438019);
     var myStartZoom=3;
+    var supportName="北京匡恩技术支持";
     $(document).ready(
-        pageLoadMap("map",mapUrl,centerPoint,myStartZoom,"匡恩技术支持")
+        function () {
+            pageLoadMap("map",mapUrl,centerPoint,myStartZoom,supportName);
+            searchPanelInit();
+        }
     )
 </script>
 </html>
