添加图层组件

--- a/index4.html
+++ b/index4.html
@@ -32,8 +32,8 @@
 <div id="layerPanel">
     <span class="layer_pop_ctrl">
         <div>
-					<img style="height:100px;width:100px"/>
-				</div>
+            <img src="plugins/layer/layer.png"/>
+        </div>
     </span>
     <div id="layerContainer"></div>
 </div>
