添加图层完成

--- a/index4.html
+++ b/index4.html
@@ -40,7 +40,7 @@
 <div id="map" class="mapfull"></div>
 </body>
 <script>
-    var mapUrl="http://gis.huizhou.gov.cn:8399/arcgis/rest/services/%E8%A1%8C%E6%94%BF%E5%8A%9E%E5%85%AC%E6%94%BF%E5%8A%A1%E5%BA%95%E5%9B%BE/%E8%A1%8C%E6%94%BF%E5%8A%9E%E5%85%AC%E5%9C%B0%E5%9B%BE%E6%94%BF%E5%8A%A1%E4%BA%8C%E7%89%88DEMV12/MapServer";
+    var mapUrl="http://106.39.231.23/ArcGIS/rest/services/HZDG/%E5%BD%B1%E5%83%8F%E5%9B%BE/MapServer";
     var centerPoint = new L.LatLng(23.125965,114.438019);
     var myStartZoom=3;
     var supportName="北京匡恩技术支持";
