--- a/index4.html
+++ b/index4.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>惠州市“四规合一”信息平台-水务专题应用</title>
-    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'/>
     <!-- Load libs and plugins-->
-    <link rel="stylesheet" href="libs/leaflet/leaflet.css" />
+    <link rel="stylesheet" href="libs/leaflet/leaflet.css"/>
     <link rel="stylesheet" href="plugins/layer/jstree/themes/default/style.min.css">
     <link rel="stylesheet" href="plugins/layer/iconlayer/iconLayers.css">
     <!--<script src="libs/jquery/1.7.2/jquery.min.js"></script>-->
@@ -22,8 +22,6 @@
     <link rel="stylesheet" href="css/cmn/utils.css">
     <script src="js/cmn/mapservice.js"></script>
     <script src="js/pages/index.js"></script>
-
-
 
 
 </head>
@@ -45,13 +43,13 @@
 <div id="map" class="mapfull"></div>
 </body>
 <script>
-    var mapUrl="http://gis.huizhou.gov.cn:8399/arcgis/rest/services/%E8%A1%8C%E6%94%BF%E5%8A%9E%E5%85%AC%E6%94%BF%E5%8A%A1%E5%BA%95%E5%9B%BE/%E8%A1%8C%E6%94%BF%E5%8A%9E%E5%85%AC%E5%9C%B0%E5%9B%BE%E6%94%BF%E5%8A%A1%E4%BA%8C%E7%89%88DEMV12/MapServer";
-    var centerPoint = new L.LatLng(23.125965,114.438019);
-    var myStartZoom=3;
-    var supportName="北京匡恩技术支持";
+    var mapUrl = "http://gis.huizhou.gov.cn:8399/arcgis/rest/services/%E8%A1%8C%E6%94%BF%E5%8A%9E%E5%85%AC%E6%94%BF%E5%8A%A1%E5%BA%95%E5%9B%BE/%E8%A1%8C%E6%94%BF%E5%8A%9E%E5%85%AC%E5%9C%B0%E5%9B%BE%E6%94%BF%E5%8A%A1%E4%BA%8C%E7%89%88DEMV12/MapServer";
+    var centerPoint = new L.LatLng(23.125965, 114.438019);
+    var myStartZoom = 3;
+    var supportName = "北京匡恩技术支持";
     $(document).ready(
         function () {
-            pageLoadMap("map",mapUrl,centerPoint,myStartZoom,supportName);
+            pageLoadMap("map", mapUrl, centerPoint, myStartZoom, supportName);
             searchPanelInit();
             layerPanelInit();
             baseMapChangeInit();
