--- a/index4.html
+++ b/index4.html
@@ -23,6 +23,10 @@
     <script src="js/cmn/mapservice.js"></script>
     <script src="js/pages/index.js"></script>
 
+    <link rel="stylesheet" href="plugins/draw/leaflet.draw-src.css">
+    <script src="plugins/draw/leaflet.draw-src.js"></script>
+
+
 
 </head>
 <body>
@@ -53,6 +57,7 @@
             searchPanelInit();
             layerPanelInit();
             baseMapChangeInit();
+            toolBarInit();
         }
     )
 </script>
