--- a/indexlayer.html
+++ b/indexlayer.html
@@ -25,14 +25,13 @@
 
 	<link rel="stylesheet" href="plugins/draw/leaflet.draw-src.css">
 	<script src="plugins/draw/leaflet.draw-src.js"></script>
-	<!--<script src="plugins/toolbar/leaflet.toolbar-src.js"></script>-->
-	<!--<link rel="stylesheet" href="plugins/toolbar/leaflet.toolbar-src.css">-->
+
 	<style>
 		body { margin:0; padding:0; }
 		#map { position: absolute; top:0; bottom:0; right:0; left:0; }
-		.measure-toolbar-bt{
-			height: 20px;
-			width: 20px;
+		.leaflet-draw-dismeasure-polyline{
+			/*background-position: px -2px;*/
+			background-image: url('img/tool/dismeasure.png');
 		}
 	</style>
 
@@ -71,35 +70,6 @@
     )
 	function toolBarInitTest() {
 //debugger
-        var options = {
-            position: 'topright',
-            draw: false,
-            measure: {
-                polyline: {
-//                    icon: {
-//                        iconSize: [20,20],
-//                        iconRetinaUrl: 'img/tool/dismeasure.png',
-//					},
-                    shapeOptions: {
-                        color: '#f10215',
-                        weight: 3,
-                        opacity: 0.8
-                    }
-                },
-                polygon: {
-                    drawError: {
-                        color: '#f9ec16', // Color the shape will turn when intersects
-                        message: '不能交叉!' // Message that will show when intersect
-                    },
-                    shapeOptions: {
-                        color: '#f10215',
-                        weight: 3,
-                        opacity: 0.8
-                    }
-                }
-            }
-
-        };
         L.drawLocal.draw.handlers.polyline.tooltip.start = '点击开始';
         L.drawLocal.draw.handlers.polyline.tooltip.cont = '点击继续';
         L.drawLocal.draw.handlers.polyline.tooltip.end = '双击结束';
@@ -111,10 +81,35 @@
         L.drawLocal.draw.toolbar.finish.title = '结束测量';
         L.drawLocal.draw.toolbar.finish.text = '结束';
 
-        var drawControl = new L.Control.Draw(options);
-        myMap.addControl(drawControl);
+        L.drawLocal.edit.handlers.remove.tooltip.text = '点击对象删除';
+
         var editableLayers = new L.FeatureGroup();
         myMap.addLayer(editableLayers);
+        var options = {
+            position: 'topright',
+            draw: false,
+            measure: {
+                dismeasure: {
+                    shapeOptions: {
+                        color: '#f10215',
+                        weight: 3,
+                        opacity: 0.8
+                    }
+                },
+                areameasure: {
+                    shapeOptions: {
+                        color: '#f10215',
+                        weight: 3,
+                        opacity: 0.8
+                    }
+                },
+                clearshapes: {
+                    featureGroup: editableLayers
+				}
+            }
+        };
+        var drawControl = new L.Control.Draw(options);
+        myMap.addControl(drawControl);
         myMap.on(L.Draw.Event.CREATED, function (e) {
             var type = e.layerType,
                 layer = e.layer;
