--- a/index4.html
+++ b/index4.html
@@ -20,7 +20,6 @@
     <script src="plugins/layer/iconlayer/iconLayers.js"></script>
     <script src="plugins/draw/leaflet.draw-src.js"></script>
 
-
     <!--Load cmn js and css-->
     <link rel="stylesheet" href="css/cmn/utils.css">
     <script src="js/cmn/mapservice.js"></script>
@@ -29,10 +28,10 @@
 </head>
 <body>
 <div id="searchPanel">
-    <form class="wrapper">
-        <input class="inputbox" type="text" name="search" id="search">
-        <input class="submit" type="button" value="Search">
-    </form>
+    <div class="wrapper">
+        <input class="inputbox" type="text"  id="searchTxt">
+        <input class="submit" type="button" id="searchBt">
+    </div>
 </div>
 <div id="layerPanel">
     <span class="layer_pop_ctrl">
