测试数据查询结果展示

--- a/indexlayer.html
+++ b/indexlayer.html
@@ -38,10 +38,10 @@
 </head>
 <body>
 <div id="searchPanel">
-	<form class="wrapper">
-		<input class="inputbox" type="text" name="search" id="search">
-		<input class="submit" type="button" value="Search">
-	</form>
+	<div class="wrapper">
+		<input class="inputbox" type="text" name="search" id="searchTxt">
+		<input class="submit" type="button" value="Search" id="searchBt">
+	</div>
 </div>
 <div id="layerPanel">
     <span class="layer_pop_ctrl">
