添加提示信息组件

--- a/index4.html
+++ b/index4.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="plugins/layer/jstree/themes/default/style.min.css">
     <link rel="stylesheet" href="plugins/layer/iconlayer/iconLayers.css">
     <link rel="stylesheet" href="plugins/draw/leaflet.draw-src.css">
+    <link rel="stylesheet" href="plugins/msgdialog/overhang.css">
     <!--<script src="libs/jquery/1.7.2/jquery.min.js"></script>-->
     <script src="libs/jquery/1.11.0/jquery-1.11.0.min.js"></script>
+    <script src="libs/jquery/1.11.0/jquery-ui.min.js"></script>
     <script src="libs/leaflet/leaflet-src.js"></script>
     <script src="plugins/esri-leaflet/2.0.6/esri-leaflet-debug.js"></script>
     <script src="plugins/proj4leaflet/proj4-compressed.js"></script>
@@ -19,6 +21,8 @@
     <script src="plugins/layer/jstree/jstree.js"></script>
     <script src="plugins/layer/iconlayer/iconLayers.js"></script>
     <script src="plugins/draw/leaflet.draw-src.js"></script>
+    <script src="plugins/msgdialog/overhang.js"></script>
+
 
     <!--Load cmn js and css-->
     <link rel="stylesheet" href="css/cmn/utils.css">
