--- a/indexlayer.html
+++ b/indexlayer.html
@@ -25,6 +25,9 @@
 
 	<link rel="stylesheet" href="plugins/draw/leaflet.draw-src.css">
 	<script src="plugins/draw/leaflet.draw-src.js"></script>
+	<link rel="stylesheet" href="plugins/msgdialog/overhang.css">
+	<script src="plugins/msgdialog/overhang.js"></script>
+	<script src="libs/jquery/1.11.0/jquery-ui.min.js"></script>
 
 	<style>
 		body { margin:0; padding:0; }
@@ -34,6 +37,8 @@
 			background-image: url('img/tool/dismeasure.png');
 		}
 	</style>
+
+
 
 </head>
 <body>
