--- a/index4.html
+++ b/index4.html
@@ -21,6 +21,7 @@
     <script src="plugins/layer/iconlayer/iconLayers.js"></script>
     <script src="plugins/draw/leaflet.draw-src.js"></script>
     <script src="plugins/msgdialog/overhang.js"></script>
+    <script src="plugins/load/center-loader.js"></script>
 
 
     <!--Load cmn js and css-->
@@ -35,6 +36,8 @@
         <input class="inputbox" type="text"  id="searchTxt">
         <input class="submit" type="button" id="searchBt">
     </div>
+</div>
+<div id="loadingPanel">
 </div>
 <div id="layerPanel">
     <span class="layer_pop_ctrl">
